--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         >
           <i class="fas fa-chevron-left"></i>
         </button>
-        <a href="#" class="text-lg font-semibold">Tailwind Sidebar Toggle</a>
+        <a href="/tailwind/" class="text-lg font-semibold"
+          >Tailwind Sidebar Toggle</a
+        >
       </div>
 
       <!-- ✅ User Profile -->
@@ -52,7 +54,7 @@
         </button>
       </div>
       <a
-        href="/login/"
+        href="/tailwind/login/"
         class="btn-login bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition"
       >
         Login
