--- a/login/index.html
+++ b/login/index.html
@@ -79,7 +79,7 @@
         <p class="text-sm text-gray-500">
           Don't have an account?
           <a
-            href="/register"
+            href="/tailwind/register/"
             class="text-blue-500 font-semibold hover:underline"
             >Register</a
           >
@@ -87,7 +87,7 @@
         <p class="text-sm text-gray-500">
           Forgot password?
           <a
-            href="/forgot-password"
+            href="/tailwind/forgot-password/"
             class="text-blue-500 font-semibold hover:underline"
             >Reset here</a
           >
@@ -107,7 +107,7 @@
         if (formValue.username === "admin" && formValue.password === "admin") {
           console.log("🚀 Login Successful!");
           localStorage.setItem("jwtToken", fakeUser.token);
-          window.location.href = "/"; // Redirect ไปหน้าหลัก
+          window.location.href = "/tailwind/"; // Redirect ไปหน้าหลัก
         } else {
           alert("❌ Invalid username or password");
         }
